Properties Page Created

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Header Section Ends -->
 
-    <!-- Navigation Bar Starts -->
+    <!-- NavBar Starts -->
     <nav class="navbar">
         <div class="container">
             <h2 class="logo">VILLA</h2>
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    <!-- Navigation Ends -->
+    <!-- NavBar Ends -->
 
 
     <!-- Hero Section Starts -->
