--- a/properties.html
+++ b/properties.html
@@ -40,7 +40,7 @@
         <div class="container">
             <h2 class="logo">VILLA</h2>
             <ul class="nav-links">
-                <li><a href="#" class="active1">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./properties.html">Properties</a></li>
                 <li><a href="./property-details.html">Property Details</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>
