--- a/property-details.html
+++ b/property-details.html
@@ -36,7 +36,7 @@
     <!-- Header Section Ends -->
 
     <!-- NavBar Starts -->
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <div class="container">
             <h2 class="logo">VILLA</h2>
             <ul class="nav-links">
