--- a/properties.html
+++ b/properties.html
@@ -2,251 +2,257 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Project</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Villa Project</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- Header Section Starts -->
+  <!-- Header Section Starts -->
 
-    <header class="top-header">
-        <div class="container">
-            <div class="left">
-                <span><i class="fa fa-envelope"></i> info@company.com</span>
-                <span><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</span>
-            </div>
-            <div class="right">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </div>
-        </div>
-    </header>
-    <hr>
+  <header class="top-header">
+    <div class="container">
+      <div class="left">
+        <span><i class="fa fa-envelope"></i> info@company.com</span>
+        <span><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</span>
+      </div>
+      <div class="right">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      </div>
+    </div>
+  </header>
+  <hr>
 
-    <!-- Header Section Ends -->
+  <!-- Header Section Ends -->
 
-    <!-- NavBar Starts -->
-    <nav class="navbar" id="navbar">
-        <div class="container">
-            <h2 class="logo">VILLA</h2>
-            <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./properties.html">Properties</a></li>
-                <li><a href="./property-details.html">Property Details</a></li>
-                <li><a href="./contact.html">Contact Us</a></li>
-            </ul>
-            <button class="schedule-btn">
-                <span class="icon"><i class="fa-solid fa-calendar"></i></span>
-                Schedule a visit
-            </button>
-        </div>
-    </nav>
+  <!-- NavBar Starts -->
+  <nav class="navbar" id="navbar">
+    <div class="container">
+      <h2 class="logo">VILLA</h2>
+      <ul class="nav-links">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./properties.html">Properties</a></li>
+        <li><a href="./property-details.html">Property Details</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
+      </ul>
+      <button class="schedule-btn">
+        <span class="icon"><i class="fa-solid fa-calendar"></i></span>
+        Schedule a visit
+      </button>
+    </div>
+  </nav>
 
-    <!-- NavBar Ends -->
+  <!-- NavBar Ends -->
 
-<!-- Head Section Starts -->
+  <!-- Head Section Starts -->
 
-<section class="head">
+  <section class="head">
     <div class="properties-header">
-        <p>HOME/PROPERTIES</p>
-        <h2>PROPERTIES</h2>
+      <p>HOME/PROPERTIES</p>
+      <h2>PROPERTIES</h2>
     </div>
-</section>
+  </section>
 
-<section class="btn">
+  <section class="btn">
     <div class="button">
-        <button class="active">Showall</button>
-        <button class="house">Apartment</button>
-        <button class="house">Villa House</button>
-        <button class="house">Penthouse</button>
+      <button class="active">Showall</button>
+      <button class="house">Apartment</button>
+      <button class="house">Villa House</button>
+      <button class="house">Penthouse</button>
     </div>
-</section>
+  </section>
 
-<!-- Head Section Ends -->
+  <!-- Head Section Ends -->
 
-<!-- Property Cards Section Starts -->
+  <!-- Property Cards Section Starts -->
 
-<section class="properties1">
+  <section class="properties1">
 
-    <div class="properties-card1">
-      <div class="properties-cards1">
+
+    <div class="properties-card">
+      <div class="properties-cards">
         <img src="./assets/images/property-01.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$2.264.000</h3>
         </div>
-        <b>18 New Street Miami, OR 97219</b>
+        <b style="margin-left: 30px;">18 New Street Miami, OR 97219</b>
 
-        <p> Bedrooms: 8
-          Bathrooms: 8</p>
-        <p>Area: 545m2
-          Floor: 3
-          Parking: 6 spots</p>
+        <p>Bedrooms: <b>8</b>
+          Bathrooms: <b>8</b></p>
+        <p>Area: <b>545m2</b>
+          Floor: <b>3</b>
+          Parking: <b>6 spots</b></p>
 
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-02.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$1.180.000</h3>
         </div>
-        <b>54 Mid Street Florida, OR 27001</b>
+        <b style="margin-left: 30px;">54 Mid Street Florida, OR 27001</b>
+        <p>Bedrooms: <b>6</b>
+          Bathrooms: <b>5</b></p>
+        <p>Area: <b>450m2</b>
+          Floor: <b>3</b>
+          Parking: <b>6 spots</b></p>
 
-        <p>Bedrooms: 6
-          Bathrooms: 5</p>
-        <p>Area: 450m2
-          Floor: 3
-          Parking: 6 spots</p>
-
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-03.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$1.460.000</h3>
         </div>
-        <b>26 Old Street Miami, OR 38540</b>
+        <b style="margin-left: 30px;">26 Old Street Miami, OR 38540</b>
+        <p>Bedrooms: <b>5</b>
+          Bathrooms: <b>4</b></p>
+        <p>Area: <b>225m2</b>
+          Floor: <b>3</b>
+          Parking: <b>10 spots</b></p>
 
-        <p>Bedrooms: 5
-          Bathrooms: 4</p>
-        <p>Area: 225m2
-          Floor: 3
-          Parking: 10 spots</p>
-
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
+
     </div>
-    <div class="properties-card1">
-      <div class="properties-cards1">
+    <div class="properties-card">
+      <div class="properties-cards">
         <img src="./assets/images/property-04.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Apartment</p>
+        <div class="price">
+          <p class="badge luxury">Apartment</p>
           <h3>$584.500</h3>
         </div>
+        <b style="margin-left: 30px;">12 New Street Miami, OR 12650</b>
+        <p> Bedrooms: <b>4</b>
+          Bathrooms: <b>3</b>
+          Area: <b>125m2</b></p>
+        <p> Floor: <b>25th</b>
+          Parking: <b>2 cars</b></p>
 
-        <b>12 New Street Miami, OR 12650</b>
-
-        <p> Bedrooms: 4
-          Bathrooms: 3
-          Area: 125m2</p>
-        <p> Floor: 25th
-          Parking: 2 cars</p>
-
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-05.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Penthouse</p>
+        <div class="price">
+          <p class="badge luxury">Penthouse</p>
           <h3>$925.600</h3>
         </div>
-        <b>34 Beach Street Florida, OR 42680</b>
+        <b style="margin-left: 30px;">34 Beach Street Florida, OR 42680</b>
+        <p>Bedrooms: <b>4</b>
+          Bathrooms: <b>4</b>
+          Area: <b>180m2</b></p>
+        <p>Floor: <b>38th</b>
+          Parking: <b>2 cars</b></p>
 
-        <p>Bedrooms: 4
-          Bathrooms: 4
-          Area: 180m2</p>
-        <p>Floor: 38th
-          Parking: 2 cars</p>
-
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-06.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Modern Condo</p>
+        <div class="price">
+          <p class="badge luxury">Modern Condo</p>
           <h3>$450.000</h3>
         </div>
-        <b>22 New Street Portland, OR 16540</b>
+        <b style="margin-left: 30px;">22 New Street Portland, OR 16540</b>
+        <p>Bedrooms: <b>3</b>
+          Bathrooms: <b>2</b>
+          Area: <b>165m2</b></p>
+        <p>Floor: <b>26th</b>
+          Parking: <b>3 cars</b></p>
 
-        <p>Bedrooms: 3
-          Bathrooms: 2
-          Area: 165m2</p>
-        <p> Floor: 26th
-          Parking: 3 cars</p>
-
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
     </div>
 
-    <div class="properties-card1">
-      <div class="properties-cards1">
+
+    </div>
+    <div class="properties-card">
+      <div class="properties-cards">
         <img src="./assets/images/property-03.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$980.000</h3>
         </div>
-        <b>14 Mid Street Miami, OR 36450</b>
+        <b style="margin-left: 30px;">14 Mid Street Miami, OR 36450</b>
 
-        <p> Bedrooms: 8
-          Bathrooms: 8</p>
-        <p>Area: 550m2
-          Floor: 3
-          Parking: 12 spots</p>
+        <p> Bedrooms: <b>8</b>
+          Bathrooms: <b>8</b></p>
+        <p>Area: <b>550m2</b>
+          Floor: <b>3</b>
+          Parking: <b>12 spots</b></p>
 
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-02.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$1.520.000</h3>
         </div>
-        <b>26 Old Street Miami, OR 12870</b>
+        <b style="margin-left: 30px;">26 Old Street Miami, OR 12870</b>
 
-        <p>Bedrooms: 12
-          Bathrooms: 15</p>
-        <p>Area: 380m2
-          Floor: 3
-          Parking: 14 spots</p>
+        <p>Bedrooms: <b>12</b>
+          Bathrooms: <b>15</b></p>
+        <p>Area: <b>380m2</b>
+          Floor: <b>3</b>
+          Parking: <b>14 spots</b></p>
 
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
 
-      <div class="properties-cards1">
+      <div class="properties-cards">
         <img src="./assets/images/property-01.jpg" alt="Property 1">
-        <div class="price1">
-          <p class="badge luxury1">Luxury Villa</p>
+        <div class="price">
+          <p class="badge luxury">Luxury Villa</p>
           <h3>$3.145.000</h3>
         </div>
-        <b>34 New Street Miami, OR 24650</b>
+        <b style="margin-left: 30px;">34 New Street Miami, OR 24650</b>
 
-        <p>Bedrooms: 10
-          Bathrooms: 12</p>
-        <p>Area: 850m2
-          Floor: 3
-          Parking: 10 spots</p>
+        <p>Bedrooms: <b>10</b>
+          Bathrooms: <b>12</b></p>
+        <p>Area: <b>850m2</b>
+          Floor: <b>3</b>
+          Parking: <b>10 spots</b></p>
 
-        <button class="visit1">Schedule a visit</button>
+        <button class="visit">Schedule a visit</button>
       </div>
     </div>
   </section>
 
   <!-- Property Cards Section Ends -->
 
+  <!-- Numbers Section Starts -->
 
+  <section class="btn">
+    <div class="number">
+      <button class="num">1</button>
+      <button class="num1">2</button>
+      <button class="num">3</button>
+      <button class="num2">>></button>
+    </div>
+  </section>
 
+  <!-- Numbers Section Ends -->
 
-
-
-    <!-- Footer Section Starts -->
-    <footer>
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design: Kota Srisowmya</p>
-    </footer>
-    <!-- Footer Section Ends -->
+  <!-- Footer Section Starts -->
+  <footer>
+    <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design: Kota Srisowmya</p>
+  </footer>
+  <!-- Footer Section Ends -->
