--- a/property-details.html
+++ b/property-details.html
@@ -59,7 +59,7 @@
     <section class="head">
         <div class="properties-header">
             <p>HOME/ SINGLE PROPERTY</p>
-            <h2>PROPERTY</h2>
+            <h2>SINGLE PROPERTY</h2>
         </div>
     </section>
 
@@ -158,11 +158,9 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Get the <b>best Villa</b> website <br>
-                        template in HTML CSS and Bootstrap <br>
-                        for your business. XYZ provides you <br>
-                        <a href="#">the best service</a> <br>
-                        in the world.
+                        Get the <b>best Villa</b> website template in HTML CSS and
+                        Bootstrap for your business. XYZ provides you the <a href="#" style="text-decoration: none;">best
+                            service</a> in the world. Please tell your friends about it.
                     </div>
                 </div>
             </div>
@@ -175,11 +173,9 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Get the <b>best Villa</b> website <br>
-                        template in HTML CSS and Bootstrap <br>
-                        for your business. XYZ provides you <br>
-                        <a href="#">the best service</a> <br>
-                        in the world.
+                        Get the <b>best Villa</b> website template in HTML CSS and
+                        Bootstrap for your business. XYZ provides you the <a href="#">best
+                            service</a> in the world. Please tell your friends about it.
                     </div>
                 </div>
             </div>
@@ -192,11 +188,9 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Get the <b>best Villa</b> website <br>
-                        template in HTML CSS and Bootstrap <br>
-                        for your business. XYZ provides you <br>
-                        <a href="#">the best service</a> <br>
-                        in the world.
+                        Get the <b>best Villa</b> website template in HTML CSS and
+                        Bootstrap for your business. XYZ provides you the <a href="#">best
+                            service</a> in the world. Please tell your friends about it.
                     </div>
                 </div>
             </div>
@@ -224,11 +218,15 @@
         <div class="deal-content">
             <div class="deal-left">
                 <ul>
-                    <li>Total Flat Space <b>540 m2</b></li>
-                    <li>Floor Number <b>3</b></li>
-                    <li>Number of Rooms <b>8</b></li>
-                    <li>Parking Available <b>Yes</b></li>
-                    <li>Payment Process <b>Bank</b></li>
+                    Total Flat Space <b>540 m2</b>
+                    <hr>
+                    Floor Number <b>3</b>
+                    <hr>
+                    Number of Rooms <b>8</b>
+                    <hr>
+                    Parking Available <b>Yes</b>
+                    <hr>
+                    Payment Process <b>Bank</b>
                 </ul>
             </div>
             <div class="deal-middle">
@@ -247,8 +245,8 @@
                     necessitatibus dignissimos mollitia <br>
                     sapiente!</p>
 
-                <button class="deal-btn">
-                    <span class="icon1"><i class="fa-solid fa-calendar"></i></span>
+                <button class="schedule-btn">
+                    <span class="icon"><i class="fa-solid fa-calendar"></i></span>
                     Schedule a visit
                 </button>
             </div>
