Final edit of Contact Page

--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,8 @@
                 </p>
 
                 <div class="info-box">
-                    <div class="info-item ">
-                        <img src="./assets/images/phone-icon.png" alt="">
+                    <div class="info-item">
+                        <img src="./assets/images/phone-icon.png" alt="phone icon" class="img1">
                         <div>
                             <strong>010-020-0340</strong><br>
                             <p>Phone Number</p>
@@ -89,7 +89,7 @@
 
                     </div>
                     <div class="info-item">
-                        <img src="./assets/images/email-icon.png" alt="">
+                        <img src="./assets/images/email-icon.png" alt="email icon" class="img2">
                         <div>
                             <strong>info@villa.co</strong><br>
                             <p> Business Email</p>
@@ -101,7 +101,7 @@
 
             <!-- Form Starts -->
 
-            <div class="form1">
+            <div class="form">
                 <form>
                     <label for="name"> Name</label>
                     <input type="text" id="name" name="name" placeholder="Full Nmae">
@@ -114,7 +114,7 @@
                     <input type="subject" id="subject" name="subject" placeholder="Subject">
                     <label for="message">Message</label>
                     <textarea placeholder="Your Message" rows="4"></textarea>
-                    <button class="submit1">Send Message</button>
+                    <button class="submit">Send Message</button>
                 </form>
             </div>
 
