--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <div class="contact-container">
                 <div class="map">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d406062.26008847635!2d82.8885214818924!3d17.70242955826712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a395afb375cec97%3A0xc0775a251e45f1ed!2sRushikonda%20Beach!5e1!3m2!1sen!2sin!4v1757775574494!5m2!1sen!2sin"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3798.421495269737!2d83.32541777439557!3d17.72129657624433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a39431091981967%3A0x7d1a6206c601c125!2sSri%20Manikanta&#39;s%20Venkateswara%20Apartment!5e0!3m2!1sen!2sin!4v1694523091345!5m2!1sen!2sin"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
