Background Color Added for Badges

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-01.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Luxury Villa</p>
+                    <p class="badge luxury">Luxury Villa</p>
                     <h3>$2.264.000</h3>
                 </div>
                 <b style="margin-left: 30px;">18 New Street Miami, OR 97219</b>
@@ -299,7 +299,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-02.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Luxury Villa</p>
+                    <p class="badge luxury">Luxury Villa</p>
                     <h3>$1.180.000</h3>
                 </div>
                 <b style="margin-left: 30px;">54 Mid Street Florida, OR 27001</b>
@@ -315,7 +315,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-03.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Luxury Villa</p>
+                    <p class="badge luxury">Luxury Villa</p>
                     <h3>$1.460.000</h3>
                 </div>
                 <b style="margin-left: 30px;">26 Old Street Miami, OR 38540</b>
@@ -333,7 +333,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-04.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Apartment</p>
+                    <p class="badge luxury">Apartment</p>
                     <h3>$584.500</h3>
                 </div>
                 <b style="margin-left: 30px;">12 New Street Miami, OR 12650</b>
@@ -349,7 +349,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-05.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Penthouse</p>
+                    <p class="badge luxury">Penthouse</p>
                     <h3>$925.600</h3>
                 </div>
                 <b style="margin-left: 30px;">34 Beach Street Florida, OR 42680</b>
@@ -365,7 +365,7 @@
             <div class="properties-cards">
                 <img src="./assets/images/property-06.jpg" alt="Property 1">
                 <div class="price">
-                    <p class="badge luxury1">Modern Condo</p>
+                    <p class="badge luxury">Modern Condo</p>
                     <h3>$450.000</h3>
                 </div>
                 <b style="margin-left: 30px;">22 New Street Portland, OR 16540</b>
